<resources>
    <string name="app_name">NearBy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_to_foursquare">Connect to Foursquare</string>
    <string name="logout">logout</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="address">address</string>
    <string name="categories">categories</string>
    <string name="region">region</string>
    <string name="link">link</string>
    <string name="distance">distance</string>
</resources>