<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".presentation.place_details.PlaceDetailsFragment">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gitLoadingDetails"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/loading_gif" />

    <TextView
        android:id="@+id/textViewDetailsError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewPlaceImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/place_img"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginBottom="2dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Burger king"
                android:background="@color/light_gray"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginBottom="2dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPlaceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Burger king"
                android:background="@color/light_gray"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:layout_marginBottom="2dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPlaceCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Burger king"
                android:background="@color/light_gray"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:layout_marginBottom="2dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPlaceRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Burger king"
                android:background="@color/light_gray"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_marginBottom="2dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPlaceDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Burger king"
                android:background="@color/light_gray"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>